RESOLVED FIXED115401
[CSS Grid Layout] Fix handling of 'inherit' and 'initial' for grid lines
https://bugs.webkit.org/show_bug.cgi?id=115401
Summary [CSS Grid Layout] Fix handling of 'inherit' and 'initial' for grid lines
Ryosuke Niwa
Reported 2013-04-30 00:55:09 PDT
We should consider back porting https://chromium.googlesource.com/chromium/blink/+/5d3509453888658290265b2ca96b569862ea396b Fix handling of 'inherit' and 'initial' for grid lines 'initial' and 'inherit' are always allowed values for CSS properties. As the CSSParser handles them automatically, those 2 values were never taken care of in StyleResolver, leading to ASSERTs triggering. While touching this code, renamed the RenderStyle grid line accessors as it shouldn't ambiguous to whom they apply. BUG=234198 TESTS=fast/css-grid-layout/grid-item-column-row-get-set.html fast/css-grid-layout/grid-item-end-after-get-set.html fast/css-grid-layout/grid-item-start-before-get-set.html Review URL: https://chromiumcodereview.appspot.com/14493016
Attachments
Patch (22.96 KB, patch)
2013-11-06 04:47 PST, Sergio Villar Senin
no flags
Patch (23.05 KB, patch)
2013-11-06 07:49 PST, Sergio Villar Senin
kling: review+
Sergio Villar Senin
Comment 1 2013-11-06 04:47:17 PST
EFL EWS Bot
Comment 2 2013-11-06 04:58:12 PST
EFL EWS Bot
Comment 3 2013-11-06 05:02:52 PST
Build Bot
Comment 4 2013-11-06 05:21:16 PST
Build Bot
Comment 5 2013-11-06 05:55:51 PST
Build Bot
Comment 6 2013-11-06 07:14:41 PST
Sergio Villar Senin
Comment 7 2013-11-06 07:49:05 PST
Sergio Villar Senin
Comment 8 2013-11-07 02:44:05 PST
Note You need to log in before you can comment on or make changes to this bug.