[CSS Grid Layout] Fix handling of 'inherit' and 'initial' for grid lines https://bugs.webkit.org/show_bug.cgi?id=115401

Reviewed by Andreas Kling.

Source/WebCore:

From Blink r150585 by <jchaffraix@chromium.org>

Added support for 'inherit' and 'initial' special values to
grid-auto-{columns|rows} and grid-definition-{columns|rows}.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::applyProperty): Resolve 'initial' and 'inherit'.
* rendering/style/RenderStyle.h: Added initialNamedGrid{Column|Row}Lines().
* rendering/style/StyleGridData.cpp:
(WebCore::StyleGridData::StyleGridData): Initialize m_namedGrid{Column|Row}Lines.

LayoutTests:

Added 'inherit' and 'initial' testing support to existing tests.

* fast/css-grid-layout/grid-auto-columns-rows-get-set-expected.txt:
* fast/css-grid-layout/grid-auto-columns-rows-get-set.html:
* fast/css-grid-layout/grid-auto-flow-get-set-expected.txt:
* fast/css-grid-layout/grid-auto-flow-get-set.html:
* fast/css-grid-layout/grid-columns-rows-get-set-expected.txt:
* fast/css-grid-layout/grid-columns-rows-get-set-multiple-expected.txt:
* fast/css-grid-layout/resources/grid-columns-rows-get-set-multiple.js:
(testInherit): New helper function.
(testInitial): Ditto.
* fast/css-grid-layout/resources/grid-columns-rows-get-set.js:
(testInherit): New helper function.
(testInitial): Ditto.

Canonical link: https://commits.webkit.org/142150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158838 268f45cc-cd09-0410-ab3c-d52691b4dbfc